--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1><strong>Andrew Wright</strong></h1>
 							</header>
-							<p>Astonomy undergraduate at UMass Amherst. Currently, I am doing research in high energy astrophysics under <a href="https://www.umass.edu/astronomy/people/faculty/daniel-wang">Prof. Daniel Wang</a>. I am studying the potential doppler shift and broadening of the supermassive black hole Sgr A* that would be seen by future NASA telescopes, Lynx and Xrism. By using a 3D hydrodynamic simulation and <a href="https://hea-www.cfa.harvard.edu/soxs/">SOXS</a> coding software I can determine the velocity and direction of the surrounding gas which will help determine the innate properties of the black hole such as spin and why it is so quiet in X-ray emissions.</p>
+							<p>Astonomy undergraduate at UMass Amherst. Currently, I am doing research in high-energy astrophysics under <a href="https://www.umass.edu/astronomy/people/faculty/daniel-wang">Prof. Daniel Wang</a>. I am studying the potential doppler shift and broadening of the supermassive black hole Sgr A* that would be seen by future NASA telescopes, Lynx and Xrism. By using a 3D hydrodynamic simulation and <a href="https://hea-www.cfa.harvard.edu/soxs/">SOXS</a> coding software I can determine the velocity and direction of the surrounding gas which will help determine the innate properties of the black hole such as spin and why it is so quiet in X-ray emissions.</p>
 							<a src="images/WIP.jpg" class="button large scrolly">My CV</a>
 						</div>
 					</div>
@@ -67,7 +67,7 @@
 							<section class="box style1">
 								<span class="icon featured fa-palette"></span>
 								<h3>Art</h3>
-								<p>Alongside my passion for the sciences, I have been practicing art since I was very little. I work in a plethora of mediums, from drawing to sculpting. I like to mix art and science together as well in the form of gadgetry.</p>
+								<p>Alongside my passion for the sciences, I have been practicing art since I was very little. I work in a plethora of mediums, from drawing to sculpting. I like to mix art and science together as well as in the form of gadgetry.</p>
 							</section>
 						</div>
 					</div>
